kubernetes/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-app
  namespace: default
spec:
  selector:
    app: test-app
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
